Fixed scrollbar

--- a/src/scss/blocks/_personal-area-section.scss
+++ b/src/scss/blocks/_personal-area-section.scss
@@ -3,6 +3,26 @@
   margin-top: -110px;
   background: radial-gradient(24.11% 128.12% at 67.21% 104.82%, rgba(26, 28, 30, 0.73) 0%, #1A1C1E 100%);
 
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
 
   &--calculator {
     margin-bottom: 39px;
